--- a/appsettings.json
+++ b/appsettings.json
@@ -11,15 +11,15 @@
     "DefaultConnection": "Server=13.126.146.22; Port=3306; Database=ihma; Uid=dbuser; Pwd=dbuser; SslMode=Preferred;"
   },
   "AWS": {
-    "AccessKey": "AKIA2YL2OAEO7YFZMPUM",
-    "SecretKey": "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",
+    "AccessKey": "AKIA2YL2OAEOUCLCIVBX",
+    "SecretKey": "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",
     "BucketName": "ihma-files",
     "ImageFolderName": "images/",
     "DocumentFolderName": "docs/",
     "VideoFolderName": "videos/",
     "FileSize": "6553600",
     "BaseUrl": "amazonaws.com",
-    "Profile": "demoawsuser",
+    "Profile": "s3user",
     "Region": "us-east-1"
   },
   "ZoomMeetingKey": "2HLWqcyMR6ek4RvimqgsEw",
